<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">どんな本持ってたっけ？</string>
    <string name="app_name">TestApp</string>
    <string name="result_failed">No barcode found</string>
    <string name="result_failed_why">"The user gave up and pressed Back"</string>
    <string name="result_succeeded">Found barcode</string>
    <string name="result_network_failed">Network Disconnected</string>
    <string name="result_network_failed_contents">検索出来ませんでした。</string>
    <string name="btn_scan">ISBN　スキャン</string>
    <string name="btn_input">ISBN　手入力</string>
    <string name="btn_save">登録</string>
    <string name="btn_show">表示</string>
    <string name="input_name">本の情報を入力します</string>
    <string name="show_name">登録済みの本</string>
    <string name="labelAsin">ASIN</string>
    <string name="labelDetail_url">AmazonURL</string>
    <string name="labelImage_url">画像URL</string>
    <string name="labelAuthor">著者</string>
    <string name="labelCategory">カテゴリ</string>
    <string name="labelMedia">メディア</string>
    <string name="labelEan">EAN</string>
    <string name="labelPublish_date">出版日</string>
    <string name="labelPublisher">出版社</string>
    <string name="labelPrice">価格</string>
    <string name="labelTitle">タイトル(そのまま)</string>
    <string name="labelFormed_title">タイトル</string>
    <string name="labelVolume">巻数</string>
    <string name="labelBuy_date">購入日</string>
    <string name="labelBuy_price">購入価格</string>
    <string name="search_label">タイトル検索</string>
    <string name="search_hint">タイトル名</string>
    <string name="search_result">検索結果：</string>
    <string name="nodata">検索結果はありませんでした。</string>
</resources>