<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/linearLayout1"
		    android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

		    <TextView
		        android:id="@+id/textViewFormed_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/labelFormed_title"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
				    <EditText
		        android:id="@+id/editTextFormed_title"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text"
		        android:singleLine="true" >
                <requestFocus/>
		    </EditText>
		
		    <TextView
		        android:id="@+id/textViewVolume"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/labelVolume"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/editTextVolume"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text"
		        android:singleLine="true" >
		    </EditText>

		    <TextView
		        android:id="@+id/textViewAuthor"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/labelAuthor"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/editTextAuthor"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text"
		        android:singleLine="true" >
		    </EditText>
		
		    <TextView
		        android:id="@+id/textViewBuy_date"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/labelBuy_date"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/editTextBuy_date"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text"
		        android:singleLine="true" >
		    </EditText>
		
		    <TextView
		        android:id="@+id/textViewBuy_price"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/labelBuy_price"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/editTextBuy_price"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text"
		        android:singleLine="true" >
		    </EditText>
		
 			<TableLayout
                    android:id="@+id/otherInfos"
 			        android:layout_width="fill_parent"
    				android:layout_height="wrap_content"
    				android:padding="5dip"
    				android:stretchColumns="1" android:shrinkColumns="1" >

                <TableRow android:id="@+id/rowCategory" >

                    <TextView
                        android:id="@+id/labelCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelCategory"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/valueCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_marginLeft="5dip"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow android:id="@+id/rowMedia" >

                    <TextView
                        android:id="@+id/labelMedia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelMedia"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/valueMedia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_marginLeft="5dip"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow android:id="@+id/rowPublisher" >

                    <TextView
                        android:id="@+id/labelPublisher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelPublisher"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/valuePublisher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_marginLeft="5dip"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow android:id="@+id/rowPublish_date" >

                    <TextView
                        android:id="@+id/labelPublish_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelPublish_date"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/valuePublish_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_marginLeft="5dip"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow android:id="@+id/rowPrice" >

                    <TextView
                        android:id="@+id/labelPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelPrice"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/valuePrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_marginLeft="5dip"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow android:id="@+id/rowAsin" >

                    <TextView
                        android:id="@+id/labelAsin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelAsin"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/valueAsin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_marginLeft="5dip"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow android:id="@+id/rowEan" >

                    <TextView
                        android:id="@+id/labelEan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelEan"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/valueEan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_marginLeft="5dip"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>
<!--
                <TableRow android:id="@+id/rowDetail_url" >

                    <TextView
                        android:id="@+id/labelDetail_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelDetail_url"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/valueDetail_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow android:id="@+id/rowImage_url" >

                    <TextView
                        android:id="@+id/labelImage_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelImage_url"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/valueImage_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow android:id="@+id/rowTitle" >

                    <TextView
                        android:id="@+id/labelTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelTitle"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/valueTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>  -->
            </TableLayout>
		</LinearLayout>
    </ScrollView>

    <View
       android:layout_width="match_parent"
       android:layout_height="2dip"
       android:background="#FF909090" />
   
    <Button
       android:id="@+id/button_save"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/btn_save" />
   
</LinearLayout>